# pyMathBitPrecise

./: .coveragerc  .gitignore  .travis.yml  README.md  pyproject.toml  setup.py
.circleci/: config.yml
doc/: index.rst
pyMathBitPrecise/: array.py  array3t.py  bit_utils.py  bits3t.py  bits3t_vld_masks.py  enum3t.py  floatt.py  utils.py
pyMathBitPrecise/tests/: all.py  array3t_test.py  bit_utils_test.py  bits3tArithmetic_test.py  bits3tBaseTC.py  bits3tBasic_test.py  bits3tBitwise_test.py  bits3tCmp_test.py  bits3tSlicing_test.py  enum3t_test.py
tests/: all.py  array3t_test.py  bit_utils_test.py  bits3tArithmetic_test.py  bits3tBaseTC.py  bits3tBasic_test.py  bits3tBitwise_test.py  bits3tCmp_test.py  bits3tSlicing_test.py  enum3t_test.py  floatt_test.py
