[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "pyMathBitPrecise"
version = "1.0"
dependencies = []
requires-python = ">=3.8"
authors = [
  {name = "Michal Orsak", email = "Nic30original@gmail.com"},
]

description = "Numeric types of variable bit size and utils for bit manipulations"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
keywords = [
 'vhdl', 'verilog', 'systemverilog', 'math']
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.6",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)",
  "Topic :: System :: Hardware",
  "Topic :: System :: Emulators",
  "Topic :: Utilities"
]

[project.urls]
Homepage = "https://github.com/Nic30/pyMathBitPrecise"
Documentation = "https://pyMathBitPrecise.readthedocs.io/en/latest/?badge=latest"
Repository = "https://github.com/Nic30/pyMathBitPrecise.git"
"Bug Tracker" = "https://github.com/Nic30/pyMathBitPrecise/issues"
